# teal

./: ExecutionPlan.md  Makefile  Proposal.md  README.md  pyproject.toml
data/metadata/: manual_download_urls.txt  manual_download_urls_tier1_20.txt  sources.csv  sources_tier1_seed_20.csv
data/raw/: sample_poem_1916.txt
docs/protocol/: corpus_sourcing_plan.md  data_protocol.md  manual_download_workflow.md
docs/thesis/: README.md  chapter_01_methods.md  chapter_02_victorian_baseline.md  chapter_03_transition_period.md  chapter_04_modernist_fracture.md  chapter_05_conclusion.md
environment/: requirements.txt
scripts/: __init__.py
scripts/affect/: infer_affect.py  train_baseline.py  train_transformer.py
scripts/clean/: ocr_correct.py  segment_stanzas.py
scripts/ingest/: build_metadata.py  fetch_sources.py  merge_source_registries.py  report_source_coverage.py
scripts/prosody/: compute_entropy.py  compute_latency.py  run_scansion.py
scripts/stats/: run_break_tests.py  run_cca.py  run_robustness.py
scripts/utils/: __init__.py  common.py
scripts/viz/: build_figures.py
src/teal/: __init__.py
src/teal/affect/: __init__.py
src/teal/config/: __init__.py
src/teal/prosody/: __init__.py
tests/unit/: test_break_tests_logic.py  test_build_metadata_logic.py  test_entropy_logic.py  test_ocr_correct_logic.py  test_robustness_logic.py  test_scansion_latency_logic.py  test_segment_stanzas_logic.py  test_smoke_imports.py  test_viz_helpers.py
